--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.12.5",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@types/node": "^20",
